--- a/templates/index.html
+++ b/templates/index.html
@@ -8,25 +8,51 @@
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-  
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<style>
+  h1{
+    text-align: center;
+  }
+</style>
 </head>
 
 <body>
- <div class="login">
-  <h1>Predict Salary Analysis</h1>
-
+ <div class="login container">
+  <h1>Warerhouse Demand Forecast</h1>
+  <div class="row">
+    <div class="col-lg-2 col-sm-2">
+    </div>
+    <div class="col-lg-8 col-sm-8" >
      <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}"method="post">
-      <input type="text" name="experience" placeholder="Experience" required="required" />
-        <input type="text" name="test_score" placeholder="Test Score" required="required" />
-    <input type="text" name="interview_score" placeholder="Interview Score" required="required" />
+    <form action="{{ url_for('predict')}}"method="post" style="width: 100%">
+      <label>Enter the forecasting day: </label>
+      <input type="text" name="experience" placeholder="Enter Forecasting Day" required="required" style="width: 100%" /><br>
+        <label for="cars">Choose a store</label>
+           <select name="stores" id="stores" required="required">
+            <option value="1">Store 1</option>
+            <option value="2">Store 2</option>
+            <option value="3">Store 3</option>
+            <option value="4">Store 4</option>
+            <option value="5">Store 5</option>
+          </select>   <br>
+      <label for="cars">Choose a Product</label>
+           <select name="product_id" id="product_id" required="required">
+            <option value="108696">Meat</option>
+            <option value="164088">Dairy</option>
+            <option value="804098">Sea Food</option>
+            <option value="1695936">Fruits</option>
+            <option value="2032088">Flour</option>
+          </select>
 
-        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+      <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
     </form>
+
 
    <br>
    <br>
    {{ prediction_text }}
+ </div>
+
 
  </div>
 
