--- a/templates/index.html
+++ b/templates/index.html
@@ -27,16 +27,32 @@
     <form action="{{ url_for('predict')}}"method="post" style="width: 100%">
       <label>Enter the forecasting day: </label>
       <input type="text" name="experience" placeholder="Enter Forecasting Day" required="required" style="width: 100%" /><br>
-        <label for="cars">Choose a store</label>
-           <select name="stores" id="stores" required="required">
-            <option value="1">Store 1</option>
-            <option value="2">Store 2</option>
-            <option value="3">Store 3</option>
-            <option value="4">Store 4</option>
-            <option value="5">Store 5</option>
-          </select>   <br>
+          <label for="cars">Choose a store</label>
+             <select name="stores" id="stores" required="required" style="width: 50%; float: right;">
+              <option value="1">Store 1</option>
+              <option value="2">Store 2</option>
+              <option value="3">Store 3</option>
+              <option value="4">Store 4</option>
+              <option value="5">Store 5</option>
+              <option value="6">Store 6</option>
+              <option value="7">Store 7</option>
+              <option value="8">Store 8</option>
+              <option value="9">Store 9</option>
+              <option value="10">Store 10</option>
+              <option value="11">Store 11</option>
+              <option value="12">Store12</option>
+              <option value="13">Store 13</option>
+              <option value="14">Store 14</option>
+              <option value1="15">Store 15</option>
+              <option value="16">Store 16</option>
+              <option value="17">Store 17</option>
+              <option value="18">Store 18</option>
+              <option value="19">Store 19</option>
+              <option value="20">Store 20</option>
+
+            </select>   <br>
       <label for="cars">Choose a Product</label>
-           <select name="product_id" id="product_id" required="required">
+           <select name="product_id" id="product_id" required="required" style="width: 50%; float: right;">
             <option value="108696">Meat</option>
             <option value="164088">Dairy</option>
             <option value="804098">Sea Food</option>
